welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:12: error: expected class or object definition
def image(c:Color, d:Color) ={
^PatternPicture:26: error: Unmatched closing brace '}' ignored here
}
^